2008-02-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoDAVRendererTypes.h (SoWebDAVValue): added
	SOGoDAVDictionary webdav value class.

	* SoObjects/SOGo/NSArray+Utilities.m ([NSArray -uniqueObjects]):
	new method that returns unique occurences of the objects.

	* SoObjects/Contacts/SOGoContactGCSFolder.m ([SOGoContactGCSFolder
	-davNamespaces]): same as below.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -davNamespaces]): take the parents
	namespaces into account.

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject -addUserInAcls:uid]):
	new method.
	([SOGoObject -removeUserFromAcls:uid]): new methods (see below).
	([SOGoObject -davNamespaces]): declare the
	"urn:inverse:params:xml:ns:inverse-dav" namespace.
	([SOGoObject -davRecordForUser:user])
	([SOGoObject -davAclQuery:queryContext]): new methods to answer to
	the "user-list", "roles", "set-roles", "add-user", "remove-user"
	inverse DAV methods.

	* UI/Common/UIxObjectActions.m ([UIxObjectActions -addUserInAclsAction])
	([UIxObjectActions -removeUserFromAclsAction]): moved the core of
	those methods into SOGoObject and translate its result into an
	appropriate HTTP status.

2008-02-20  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoGCSFolder.m ([SOGoGCSFolder -davInverseACL]):
	first implementation of a DAV interface to SOGo roles. Returns the
	result in JSON.

2008-02-14  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* GNUmakefile: migrated to GNUstep Make 2.

2008-02-12  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoFreeBusyObject.m ([SOGoFreeBusyObject
	-iCalStringForFreeBusyInfos:_infosfrom:_startDateto:_endDate]): we
	no longer invoke [container login], since this method has been
	removed. Instead we invoke ownerInContext:.

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder
	-fetchContentObjectNames]): new model method for all subclasses.
	This will be removed in the future since toOneRelationshipKeys
	must be sufficient.
